# workorder-fastapi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLEANUP_RECOMMENDATIONS.md  NOTES.md  README.md  Taskfile.yml
.claude/commands/: finalize.md  lint.md
.github/: dependabot.yml
.github/workflows/: database-migrations.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  locations.py  work_orders.py
backend/app/core/: config.py
backend/app/models/: auth.py  work_orders.py
backend/app/services/: auth.py  supabase.py
backend/app/utils/: debug.py  error_handlers.py  logger.py
backend/tests/: conftest.py  test_auth.py  test_auth_service.py
database/: create_tables.sql  sample_data.sql
frontend/: .dockerignore  .env.example  .stylelintrc.json  Dockerfile  README.md  biome.json  docker-entrypoint.sh  nginx.conf  orval.config.ts  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html
supabase/: config.toml
supabase/migrations/: 20250606094233_migrate_to_uuid.sql  20250606100308_fix_uuid_migration.sql  20250606100440_complete_uuid_setup.sql  20250606100556_final_cleanup.sql  20250606100723_simple_cleanup.sql  20250606100826_minimal_final.sql  20250606101156_check_data_state.sql  20250606101334_restore_sample_data.sql  20250606102409_convert_ids_to_uuid.sql  20250606104306_fix_uuid_defaults.sql  20250609073541_remove_location_name_field.sql  20250609080735_geocode_existing_locations.sql  20250610072044_add_location_reference_counting.sql
(+141 files in other folders)
